# codecrafters-kafka-rust

./: Cargo.toml  GRACEFUL_SHUTDOWN_README.md  README.md  REFACTORING_SUMMARY.md  test_client.py  test_graceful_shutdown.py
.cursor/rules/: rust_kafka_development_guidelines.mdc
logs/: kafka-broker.log.2025-05-24
src/: main.rs
src/kafka/: broker.rs
src/logging/: mod.rs
src/network/: server.rs
src/protocol/: encoding.rs  errors.rs  headers.rs  mod.rs
