[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "chrono",
] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
